# linkscribe

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  api.py  pyproject.toml  run_api.sh  setup.py  text_controller.py
backend/app/: webscrapping.py
backend/data/ml_models/: modeloweb.pkl
backend/routers/: bookmarks_controller.py  github_controller.py  users_controller.py
backend/src/app/: api.py  bookmark_controller.py  category_controller.py  user_controller.py  users_controller.py
backend/src/model/: model.py  model_loader.py  page_categorizer.py  scrap.py  scrap_tool.py  webscrapping.py
backend/src/sqlapp/: crud.py  database.py  models.py  schemas.py
backend/src/utils/: bookmark_models.py  category_models.py  constants.py  user_models.py
backend/train/: modelo_v2.ipynb
database/: Dockerfile
frontend/: Dockerfile  frontend.py  hashed_pw.pkl  logup.py  proyecto-frontend.py  pyproject.toml  run_frontend.sh  styles.css
frontend/linkscribe-ui/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/linkscribe-ui/messages/: en.json  es.json
frontend/linkscribe-ui/src/: globals.css  i18n.ts  middleware.ts
frontend/linkscribe-ui/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/linkscribe-ui/src/app/(auth)/: style.css
frontend/linkscribe-ui/src/app/(auth)/login/: page.tsx
frontend/linkscribe-ui/src/app/(auth)/sign-up/: page.tsx
frontend/linkscribe-ui/src/app/[locale]/: layout.tsx  page.tsx
frontend/linkscribe-ui/src/app/auth/: template.tsx
frontend/linkscribe-ui/src/app/components/: bookmark-card.tsx  client-image.tsx  custom-body.tsx  custom-header.tsx  link-form.tsx  sign-button.tsx
frontend/linkscribe-ui/src/app/login/: page.tsx
frontend/linkscribe-ui/src/app/saved/: layout.tsx  page.tsx
frontend/linkscribe-ui/src/app/sign-up/: page.tsx
frontend/linkscribe-ui/src/app/with-modal/: layout.tsx  page.tsx
frontend/linkscribe-ui/src/components/auth/: provider.tsx
frontend/linkscribe-ui/src/components/auth-modal/: Modal.tsx  ModalHeader.tsx  SwitchLink.tsx  modal-header.tsx  modal-text.tsx  modal.tsx  switch-link.tsx
frontend/linkscribe-ui/src/components/hoc/: auth-redirect.tsx
frontend/linkscribe-ui/src/components/layout/: Header.tsx  NavBar.tsx  PageWrapper.tsx  SignButton.tsx  UserButton.tsx  header.tsx  login-button.tsx  nav-bar.tsx  page-wrapper.tsx  sign-button.tsx  user-button.tsx
frontend/linkscribe-ui/src/components/login/: custom-input.tsx  login-form.tsx  login.tsx  password-input.tsx
frontend/linkscribe-ui/src/components/modal/: SwitchLink.tsx
frontend/linkscribe-ui/src/components/saved-page/: PageContainer.tsx  SideBar.tsx
frontend/linkscribe-ui/src/components/sign-up/: custom-input.tsx  email-input.tsx  password-input.tsx  sign-up-form.tsx  sign-up.tsx
frontend/linkscribe-ui/src/components/url-form/: IndeterminateProgressBar.tsx  URLForm.tsx  URLInput.tsx  bookmark-card.tsx  category-select.tsx  category-tree.tsx  indeterminate-progress-bar.tsx  search-select.tsx  url-form.tsx  url-input.tsx
frontend/linkscribe-ui/src/components/utils/: bookmarkAPI.ts  categoryAPI.ts  client-image.tsx  constants.tsx  functions.ts
frontend/linkscribe-ui/src/hooks/: useBookmarkData.tsx  useCategoriesData.tsx  useCategoryUpdate.tsx
frontend/linkscribe-ui/src/lib/: constants.tsx
frontend/linkscribe-ui/src/types/: types.tsx
(+68 files in other folders)
