[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["alejandropr05 <alejandropr05@hotmail.com>"]
packages = [
    {include = "app", from = "src"},
    {include = "model", from = "src"},
    {include = "sqlapp", from = "src"},
    {include = "models", from = "data"}
]

[tool.poetry.dependencies]
python = ">3.9,<3.12"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
fastapi-utils = "^0.2.1"
requests = "^2.31.0"
sqlalchemy = "1.4.49"
bs4 = "^0.0.1"
scikit-learn = "^1.3.1"
spacy = "^3.7.1"
lxml = "^4.9.3"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[tool.poetry.extras]
src = ["app", "model", "sqlapp"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
