[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Carlos Reyes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"
streamlit-authenticator = "0.1.5"
deta = "1.2.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
